Changed the font to Roboto Slab, changed the font sizes, and removed the letter spacing

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <img class="css-project" src="images/css.png">
           <img class="js-project" src="images/javascript.png">
         </div>
-        <div class="project-links">
+        <div class="todo-project-links">
           <a href="https://jthomas-to-do.netlify.app/" class="to-do_demo">Demo</a>
           <a href="https://github.com/JThomas62/To_Do" class="to-do_github">Github</a>
         </div>
