Changed font-size from px to rem

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
       <div class="about-container">
         <img class='image' src="images/headshot.jpg">
       <div class="text">
-        <p class="about_me-1">I am an avid gamer, always ready for an epic quest or multiplayer showdown. You will also find me trackside, soaking in the adrenaline rush of race events, or meticulously piecing together high-performance computers. Additionally, I have a passion for collecting model cars, each one representing a piece of automotive history and craftsmanship.</p>
-        <p class="about_me-2">While I may lean towards the quiet side, my work speaks volumes. I am driven by challenges and constantly seek opportunities to push the boundaries of my skills.</p>
+        <p class="about_me-1">I enjoy a range of activities outside of my work as a frontend web developer, including riding dirt bikes, watching all forms of racing, building computers, and playing simulator games. I also find satisfaction in assembling model car kits, listening to metal music, and observing wildlife. Despite my quiet demeanor, these interests reflect my diverse passions and hobbies.</p>
       </div>
       </div>    
     </section>
