--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     <section id="about" class="about-section">
       <div class="about-container">
         <img class='image' src="images/headshot.jpg">
-      <div class="text">
-        <p class="about_me-1">I enjoy a range of activities outside of my work as a frontend web developer, including riding dirt bikes, watching all forms of racing, building computers, and playing simulator games. I also find satisfaction in assembling model car kits, listening to metal music, and observing wildlife. Despite my quiet demeanor, these interests reflect my diverse passions and hobbies.</p>
+      <div class="about-me_container">
+        <p class="about_me">I enjoy a range of activities outside of my work as a frontend web developer, including riding dirt bikes, watching all forms of racing, building computers, and playing simulator games. I also find satisfaction in assembling model car kits, listening to metal music, and observing wildlife. Despite my quiet demeanor, these interests reflect my diverse passions and hobbies.</p>
       </div>
       </div>    
     </section>
 
     <section id="skills" class="skill-section">
-      <div class="skill-image">
+      <div class="skill-container">
         <img class="html-img" src="images/html.png">
         <img class="css-img" src="images/css.png">
         <img class="js-img" src="images/javascript.png">
