added more images for the skills, reworking the styling for to be mobile-first approach instead of desktop first

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
             <a href='#about'>About</a>
           </li>
           <li>
-            <a href='#skills'>Skill</a>
-          </li>
-          <li>
             <a href='#projects'>Project</a>
           </li>
           <li>
@@ -41,7 +38,8 @@
 
   <main>
     <section id="home" class="home-section">
-      <h1 class="name">Jacob Thomas</h1>
+      <h1 class="heading">Hello, I'm <span class="name">Jacob Thomas</span>
+      </h1>
       <h1 class="heading">I'm a frontend web developer</h1>
     </section>
 
@@ -49,26 +47,44 @@
       <div class="about-container">
         <img class='image' src="images/headshot.jpg">
       <div class="about-me_container">
-        <p class="about_me">I enjoy a range of activities outside of my work as a frontend web developer, including riding dirt bikes, watching all forms of racing, building computers, and playing simulator games. I also find satisfaction in assembling model car kits, listening to metal music, and observing wildlife. Despite my quiet demeanor, these interests reflect my diverse passions and hobbies.</p>
+        <p class="about_me">As a frontend web developer, I thrive on blending creativity and technology to craft user experiences with HTML, CSS, JavaScript, and React. The endless possibilities in web development fuel my passion for solving problems and bringing ideas to life. Outside of work, I channel my enthusiasm into hobbies like riding dirt bikes, watching racing, building computers, and playing simulator games. Assembling model car kits helps me unwind, and listening to metal music and observing wildlife provides a relaxing escape. These diverse passions reflect my dedication to both professional and personal growth, continually driving me to explore new challenges.</p>
       </div>
       </div>    
     </section>
 
     <section id="skills" class="skill-section">
       <div class="skill-container">
-        <img class="html-img" src="images/html.png">
-        <img class="css-img" src="images/css.png">
-        <img class="js-img" src="images/javascript.png">
-        <img class="react-img" src="images/react.png">
+        <div class="skills-group">
+          <h3 class="skills-header">Skilled In</h3>
+          <div class="skills-icons">
+            <img class="skill-icon" src="images/html.png" alt="HTML">
+            <img class="skill-icon" src="images/css.png" alt="CSS">
+            <img class="skill-icon" src="images/javascript.png" alt="JavaScript">
+            <img class="skill-icon" src="images/react.png" alt="React">
+            <img class="skill-icon" src="images/vite.png" alt="Vite">
+          </div>
+        </div>
+        <div class="skills-group">
+          <h3 class="skills-header">Exposed To</h3>
+          <div class="skills-icons">
+            <img class="skill-icon" src="images/java.png" alt="Java">
+            <img class="skill-icon" src="images/python.png" alt="Python">
+            <img class="skill-icon" src="images/c++.png" alt="C++">
+            <img class="skill-icon" src="images/express-js.png" alt="Express.js">
+            <img class="skill-icon" src="images/nodejs.png" alt="NodeJs">
+            <img class="skill-icon" src="images/postgresql.png" alt="PostgreSQL">
+          </div>
+        </div>
       </div>
     </section>
+    
+    
 
     <section id="projects" class="project-section">
       <div class="project-container">
         <img class="project_img" src="images/To-Do.jpg" alt="To Do Project Image">
         <div class="project-details">
           <h2 class="to-do_header">To Do</h2>
-        <hr class="separator">
           <p class="about_to-do">Built a simple yet powerful to-do list application with features such as adding tasks, editing task names, marking tasks as complete/incomplete, and deleting tasks.</p>
         <div class="tech-icons">
           <img class="html-project" src="images/html.png">
@@ -76,8 +92,8 @@
           <img class="js-project" src="images/javascript.png">
         </div>
         <div class="todo-project-links">
-          <a href="https://jthomas-to-do.netlify.app/" class="to-do_demo">Demo</a>
-          <a href="https://github.com/JThomas62/To_Do" class="to-do_github">Github</a>
+          <a href="https://jthomas-to-do.netlify.app/" class="to-do_demo">DEMO</a>
+          <a href="https://github.com/JThomas62/To_Do" class="to-do_github">GITHUB</a>
         </div>
         </div>
       </div>
