changed class=image to class=headshot, fixed the mobile layout

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <section id="about" class="about-section">
       <div class="about-container">
-        <img class='image' src="images/headshot.jpg">
+        <img class='headshot' src="images/headshot.jpg">
       <div class="about-me_container">
         <p class="about_me">As a frontend web developer, I thrive on blending creativity and technology to craft user experiences with HTML, CSS, JavaScript, and React. The endless possibilities in web development fuel my passion for solving problems and bringing ideas to life. Outside of work, I channel my enthusiasm into hobbies like riding dirt bikes, watching racing, building computers, and playing simulator games. Assembling model car kits helps me unwind, and listening to metal music and observing wildlife provides a relaxing escape. These diverse passions reflect my dedication to both professional and personal growth, continually driving me to explore new challenges.</p>
       </div>
